--- a/css/home.css
+++ b/css/home.css
@@ -1,1 +1,122 @@
 @import "./global.css";
+
+.hero {
+  overflow: hidden;
+}
+.hero-content {
+  max-height: 640px;
+  position: relative;
+  background-color: var(--peach-color);
+  border-radius: 15px;
+}
+.hero-shape {
+  right: 2px;
+  position: absolute;
+  z-index: 1;
+}
+.hero-main {
+  display: flex;
+  justify-content: space-between;
+}
+.phone {
+  padding-left: 470px;
+  z-index: 2;
+  margin: 0 auto;
+}
+.hero-left-side {
+  margin: 0 auto;
+  position: absolute;
+  z-index: 2;
+  padding-left: 95px;
+  padding-top: 145px;
+  max-width: 540px;
+}
+.hero-left-side h2 {
+  min-width: 540px;
+  z-index: 5;
+  font-size: 4.8rem;
+  line-height: 48px;
+  color: var(--white-color);
+  padding-bottom: 11px;
+}
+.hero-left-side p {
+  z-index: 5;
+  font-size: 1.6rem;
+  line-height: 26px;
+  color: var(--white-color);
+  padding-bottom: 40px;
+}
+.btn-learn-more {
+  text-transform: uppercase;
+  display: inline;
+  padding: 18px 25px 16px 24px;
+  background-color: var(--white-color);
+  color: var(--dark-gray);
+  font-weight: 500;
+  line-height: 21.68px;
+  font-size: 1.5rem;
+  border-radius: 8px;
+}
+@media screen and (max-width: 768px) {
+  .container {
+    max-width: 690px;
+    padding: 0 39px;
+  }
+  .hero-content {
+    max-height: 843px;
+  }
+  .hero-main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .phone {
+    padding-top: 255px;
+    padding-left: 0;
+  }
+  .hero-left-side {
+    padding: 60px 0 69px 0;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    gap: 10px;
+  }
+  .hero-shape {
+    left: 102px;
+    padding-top: 100px;
+    padding-left: 0;
+  }
+}
+@media screen and (max-width: 666px) {
+  .hero-content {
+    border-radius: 0;
+  }
+  .navigation .menu-burger {
+    display: block;
+    cursor: pointer;
+  }
+  .container {
+    max-width: 100%;
+    padding: 0;
+  }
+  .navigation .menu {
+    display: none;
+  }
+}
+@media screen and (max-width: 375px) {
+  .container {
+    max-width: 327px;
+  }
+  .navigation {
+    padding-top: 35px;
+  }
+  .navigation .menu {
+    display: none;
+  }
+  .navigation .menu-burger {
+    display: block;
+    cursor: pointer;
+  }
+}
